--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
 		<p>Dette er en test med Github</p>
-		<p>Vi gjør en forandring på github</p>
+		<p>Vi gjør en forandring på github, og legger litt til lokalt</p>
 	</body>
 </html>
