--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 	<body>
 		<p>Dette er en test med Github</p>
 		<p>Vi gjør en forandring på github, og legger litt til lokalt</p>
+		<span>Denne teksten skal merges med hovedbranchen</span>
 	</body>
 </html>
