--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Githubtest</title>
+		<link rel="stylesheet" href="style.css" title="mainstyle" type="text/css" media="screen" charset="utf-8">
 	</head>
 	<body>
 		<p>Dette er en test med Github</p>
